resources/testcases_static_checks/tests/positive/isRpc/uniqueConstantsRequired.rls
R(?Y, !Z) :- R(?X, ?Y) .
S(?Y, !Z) :- R(?X, ?Y) .
T(?Y, !Z) :- R(?X, ?Y) .
R(?X, ?Y) :- S(?X, ?Y), T(?X, ?Y) .

