resources/testcases_static_checks/tests/negative/isRmfc/ruleRewritingRequired.rls
A(?X), B(?X) :- P(?X) .
R(?X, !V) :- A(?X) .
R(?X, !W) :- B(?X) .
P(?Y) :- R(?X, ?Y) .

